UCLALIB-58: A little z-index magic to fix header search drawer.

--- a/www/sites/all/themes/uclalib_omega/css/uclalib-omega.styles.css
+++ b/www/sites/all/themes/uclalib_omega/css/uclalib-omega.styles.css
@@ -290,6 +290,14 @@ a:hover {
   right: 100%;
   height: 100%;
   padding: 0;
+  z-index: -1;
+  -webkit-transition: z-index 0.3s ease-in-out;
+  -moz-transition: z-index 0.3s ease-in-out;
+  -o-transition: z-index 0.3s ease-in-out;
+  transition: z-index 0.3s ease-in-out;
+}
+.is-active + .header-search-form-wrapper {
+  z-index: 100;
 }
 .header-search-form-wrapper .header-search-form {
   position: relative;
