--- a/www/sites/all/themes/uclalib_omega/sass/components/_pane-search-form.scss
+++ b/www/sites/all/themes/uclalib_omega/sass/components/_pane-search-form.scss
@@ -23,6 +23,11 @@
   right: 100%;
   height: 100%;
   padding: 0;
+  z-index: -1;
+  @include transition(z-index .3s ease-in-out);
+  .is-active + & {
+    z-index: 100;
+  }
   .header-search-form {
     position: relative;
     height: 100%;
